AM_CFLAGS = \
        $(WARNING_CFLAGS) \
        $(CODE_COVERAGE_CFLAGS)

AM_LDFLAGS = \
        $(CODE_COVERAGE_LIBS)

AM_CPPFLAGS =

noinst_LTLIBRARIES = libccan.la
libccan_la_SOURCES = \
	ccan/check_type/check_type.h \
	ccan/str/str.c \
	ccan/str/debug.c \
	ccan/str/str.h \
	ccan/str/str_debug.h \
	ccan/str/hex/hex.h \
	ccan/str/hex/hex.c \
	ccan/list/list.c \
	ccan/list/list.h \
	ccan/build_assert/build_assert.h \
	ccan/container_of/container_of.h
