AM_CFLAGS = \
        $(WARNING_CFLAGS) \
        $(CODE_COVERAGE_CFLAGS)

AM_LDFLAGS = \
        $(CODE_COVERAGE_LIBS)

AM_CPPFLAGS =

noinst_LTLIBRARIES = libccan.la
libccan_la_SOURCES = \
	ccan/check_type/check_type.h \
	ccan/str/str.c \
	ccan/str/debug.c \
	ccan/str/str.h \
	ccan/str/str_debug.h \
	ccan/str/hex/hex.h \
	ccan/str/hex/hex.c \
	ccan/list/list.c \
	ccan/list/list.h \
	ccan/base64/base64.c \
	ccan/base64/base64.h \
	ccan/bitmap/bitmap.h \
	ccan/bitmap/bitmap.c \
	ccan/endian/endian.h \
	ccan/compiler/compiler.h \
	ccan/ptrint/ptrint.h \
	ccan/build_assert/build_assert.h \
	ccan/container_of/container_of.h \
	ccan/array_size/array_size.h
